src/objects/Activity__c.object
<CustomObject>
    <fields>
        <fullName>FreelancerId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Freelancer</label>
        <referenceTo>Freelancer__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LastActivity__c</fullName>
        <label>LastActivity</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TotalAmountOfLoggedDays__c</fullName>
        <label>TotalAmountOfLoggedDays</label>
        <summaryForeignKey>WorkLog__c.ActivityId__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Activity</label>
    <nameField>
        <label>Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>